Lab 12/spoke_security.tf
resource "aws_security_group" "VPC_A_SG" {
  name        = "VPC_A_SG"
  description = "Allow SSH and ICMP inbound traffic"
  vpc_id      = aws_vpc.VPC_A.id

  ingress {
    description = "SSH into VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ICMP into VPC"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "VPC_A_SG"
  }
}

resource "aws_security_group" "VPC_B_SG" {
  name        = "VPC_A_SG"
  description = "Allow SSH and ICMP inbound traffic"
  vpc_id      = aws_vpc.VPC_B.id

  ingress {
    description = "SSH into VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ICMP into VPC"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "VPC_B_SG"
  }
}
